# decompose

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION_AUTOMATION.md  ECHOLOGY.md  HUMAN_TASKS.md  LAUNCH.md  LICENSE  README.md  SECURITY.md  TASKS.md  pyproject.toml  server.json
.github/: release-drafter.yml
.github/workflows/: benchmark.yml  ci.yml  pages.yml  publish.yml  release-drafter.yml
benchmarks/: latest.json  run.py
docs/: about.html  aecai.html  benchmarks.json  blog.html  contact.html  decompose.html  engage.html  index.html  sitemap.xml  style.css
docs/blog/: cognitive-primitive.html  regex-beats-llm.html  security-classification-lands-in-decompose-v011.html  simulation-aware.html  when-your-ai-cant-explain-why-it-flagged-a-document.html  where-decompose-fits.html  why-consulting-first.html
docs/nous/: contact.html  index.html  methodology.html  proof.html  style.css
docs/pt/: aecai.html  blog.html  contato.html  decompose.html  engage.html  index.html  sobre.html
docs/rbs/: index.html
docs/tests/: agent_policy.txt  model_card.txt
examples/: README.md  agent_router.py  compliance_audit.py  cost_calculator.py  rag_pipeline.py
lab/: results.json  run.py
marketing/: __init__.py  __main__.py  agent.py  config.py  db.py  detect.py  generate.py  marketing.db  publish.py  review.py  run.py  tools.py  voice.py
marketing/reddit/: r_claudeai.md  r_localllama.md  r_python.md
marketing/voice_corpus/: samples.json  style_guide.md
ops/: ECHO_ARCH_001_Product_Suite_Architecture.docx  ECHO_ARCH_001_Product_Suite_Architecture.md  assessment_deliverable_template.md  gen2_roadmap.md  sim aware.rtf
ops/outreach/: aecai_outreach.py
ops/site/: app.html  chat.html  (+4 more)
tests/: test_chunker.py  test_classifier.py  test_core.py  test_entities.py  test_irreducibility.py
(+35 files in other folders)
